fix nav alignment mobile

--- a/less/index.less
+++ b/less/index.less
@@ -210,7 +210,9 @@ header {
         nav {
             display: block;
             transition: all 0.5s ease;
-
+            .nav-container{
+                align-items: center;
+            }
             .logo {
                 img {
                     height: 30px;
